--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -10,13 +10,16 @@ source "https://rubygems.org"
 # Happy Jekylling!
 #gem "jekyll", "~> 3.8.6"
 
+# modern jekyll requires webrick to be included to test and run locally
+gem "webrick"
+
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 #gem "minima", "~> 2.0"
 gem "just-the-docs"
 
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
-gem "github-pages", "~> 209", group: :jekyll_plugins
+gem "github-pages", "~> 214", group: :jekyll_plugins
 
 # If you have any plugins, put them here!
 group :jekyll_plugins do
